# CrossGui

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
.github/: FUNDING.yml
CMake/: Platform.h.in
Include/Anvie/CrossGui/: Graphics.h  Maths.h
Include/Anvie/CrossGui/Plugin/: Plugin.h  README.md
Include/Anvie/CrossGui/Plugin/Graphics/: API.h  Api.h  Graphics.h  README.md
Include/Anvie/CrossGui/Plugin/Graphics/Api/: Common.h  Graphics.h  GraphicsContext.h  Mesh2D.h  Shape2D.h
Include/Anvie/CrossGui/Utils/: Maths.h  Vector.h
Shaders/: triangle.vert
Source/: CMakeLists.txt  Main.c  Maths.c  PluginTest.c
Source/Plugin/: CMakeLists.txt  Plugin.c
Source/Plugin/Graphics/Vulkan/: CMakeLists.txt  Device.c  Device.h  GraphicsContext.c  GraphicsContext.h  GraphicsPipeline.c  GraphicsPipeline.h  MeshManager.c  MeshManager.h  README.md  RenderPass.c  RenderPass.h  RenderTarget.c  RenderTarget.h  Renderer.c  Renderer.h  ShaderResourceBinding.c  ShaderResourceBinding.h  Shape2D.c  Shape2D.h  Surface.c  Surface.h  Swapchain.c  Swapchain.h  Vulkan.c  Vulkan.h
Source/Plugin/Graphics/Vulkan/Assets/Images/: shape-definition-and-manipulation.png~
Source/Utils/: CMakeLists.txt  Maths.c  Vector.c
